Make it Responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
       --lightGrey: hsl(0, 0%, 98%);
 }
 /* Global */
+html {
+      box-sizing: border-box
+}
 body {
       font-family: 'Poppins', sans-serif;
       background-color: var(--lightGrey)
@@ -39,22 +42,24 @@ body {
 }
 /* Cards */
 main .container {
+      width: 80%;
       padding: 0 60px 70px 60px;
-      position: relative;
+      margin: auto;
 }
 main .container article {
       background-color: var(--lightGrey);
       box-shadow: 1px 10px 15px rgba(212, 212, 212, 0.9);
+      display: inline-block;
       width: 320px;
       padding: 10px 40px 30px 40px;
-      margin: auto auto 30px auto;
+      margin: 10px;
       border-radius: 5px;
       color: var(--darkBlue);
       overflow: hidden;
 }
 main .container article img {
       float: right;
-      padding-top: 50px
+      padding-top: 50px;
 }
 main .container article > h3 {
       font-weight: 600;
@@ -64,11 +69,7 @@ main .container article > p {
       color: var(--greyBlue);
 }
 main .container article:first-of-type {
-      border-top: 5px solid var(--cyan);
-      position: absolute;
-      /* width: 22.184%; */
-      left: 4%;
-      top: 25%;
+      border-top: 5px solid var(--cyan);      
 }
 main .container article:nth-of-type(2) {
       border-top: 5px solid var(--red);
@@ -77,8 +78,78 @@ main .container article:nth-of-type(3) {
       border-top: 5px solid var(--orange);
 }
 main .container article:last-of-type {
-      border-top: 5px solid var(--blue);
-      position: absolute;
-      right: 4%;
-      top: 25%;
+      border-top: 5px solid var(--blue);      
+}
+
+@media (max-width: 768px) {
+      .container {
+            width: 90%;             
+            padding: 0;
+            margin: auto !important
+      }
+      .header {
+            width: 80%;  
+            padding: 70px 40px 30px 40px;    
+      }
+      .header h1 {
+            font-size: 1.4em;            
+      }
+      .header h1 + p {
+            width: 100%;
+            font-size: 0.9em
+      }
+      main .container {
+            padding: 10px;
+      }
+      main .container article {
+            width: 85%;
+            margin: 20px auto;
+            padding: 20px 40px 30px 20px;
+      }
+}
+@media (min-width: 769px) and (max-width: 993px) {
+      main .container {
+            display: flex;
+            flex-wrap: wrap;
+      }
+      main .container article {
+            width: 30%;
+      }
+}
+@media (min-width: 994px) and (max-width: 1365px) {
+      main .container {
+            display: flex;
+            flex-wrap: wrap;
+      }
+      main .container article {
+            width: 37%;
+      }
+}
+@media (min-width: 1366px) {
+      main .container {
+            position: relative;
+            width: auto
+      }
+      main .container article {
+            display: block;
+            margin: auto auto 30px auto;
+      }
+      main .container article:last-of-type {
+            position: absolute;
+            right: 4%;
+            top: 25%;
+      }
+      main .container article:first-of-type {
+            position: absolute;
+            left: 4%;
+            top: 25%;
+      }
+}
+@media (min-width: 1440px) {
+      main .container article:last-of-type {            
+            right: 7%;            
+      }
+      main .container article:first-of-type {            
+            left: 7%;            
+      }
 }
