--- a/css/styles.css
+++ b/css/styles.css
@@ -48,15 +48,20 @@ main .container {
     margin: 10px;
     border-radius: 5px;
     color: var(--darkBlue);
-    overflow: hidden; }
+    display: grid;
+    grid-template-rows: repeat(26, 10px); }
     main .container article img {
-      float: right;
-      padding-top: 15%; }
+      justify-self: right;
+      align-self: flex-end;
+      grid-row: 25; }
     main .container article > h3 {
-      font-weight: 600; }
+      font-weight: 600;
+      grid-row: 1 / 3; }
       main .container article > h3 + p {
         font-weight: 200;
-        color: var(--greyBlue); }
+        color: var(--greyBlue);
+        margin-top: 0;
+        grid-row: 8; }
     main .container article:first-of-type {
       border-top: 5px solid var(--cyan); }
     main .container article:nth-of-type(2) {
