--- a/css/styles.css
+++ b/css/styles.css
@@ -25,24 +25,23 @@ body {
 .header {
   text-align: center;
   color: var(--darkBlue); }
-  .header > h1 {
+  .header > h2 {
     font-weight: 600;
     margin: 0;
     padding: 0;
-    font-size: 1.4rem; }
-    .header > h1:first-child {
+    font-size: 1.8rem; }
+    .header > h2:first-child {
       font-weight: 200; }
-    .header > h1 + p {
+    .header > h2 + p {
       font-weight: 200;
       margin: 20px auto 0 auto;
       color: var(--greyBlue);
-      line-height: 1.5em;
-      height: 3em; }
+      line-height: 1.5em; }
 
 main .container {
   padding: 0 60px 70px 60px; }
   main .container article {
-    background-color: var(--lightGrey);
+    background-color: white;
     box-shadow: 1px 10px 15px rgba(212, 212, 212, 0.9);
     padding: 10px 40px 30px 40px;
     margin: 10px;
@@ -54,10 +53,10 @@ main .container {
       justify-self: right;
       align-self: flex-end;
       grid-row: 25; }
-    main .container article > h3 {
+    main .container article > h1 {
       font-weight: 600;
       grid-row: 1 / 3; }
-      main .container article > h3 + p {
+      main .container article > h1 + p {
         font-weight: 200;
         color: var(--greyBlue);
         margin-top: 0;
@@ -75,9 +74,15 @@ main .container {
   .container {
     --auto-grid-min-size: 18rem; } }
 
+@media (max-width: 524px) {
+  .header > h2 {
+    font-size: 1.4em; } }
+
+@media (min-width: 925px) {
+  .header h2 + p {
+    width: 50%; } }
+
 @media (min-width: 1174px) {
-  .header h1 + p {
-    width: 40%; }
   main .container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(8, 65px); }
