--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,12 @@ main .container {
       justify-self: right;
       align-self: flex-end;
       grid-row: 25; }
-    main .container article > h1 {
+    main .container article > h2 {
       font-weight: 600;
+      font-size: 20px;
+      line-height: 2em;
       grid-row: 1 / 3; }
-      main .container article > h1 + p {
+      main .container article > h2 + p {
         font-weight: 200;
         color: var(--greyBlue);
         margin-top: 0;
