--- a/css/styles.scss
+++ b/css/styles.scss
@@ -64,9 +64,11 @@ main {
                         align-self: flex-end;
                         grid-row: 25
                   }
-                  > h1 {
-                        font-weight: 600;    
-                        grid-row: 1 / 3;                    
+                  > h2 {
+                        font-weight: 600; 
+                        font-size: 20px;   
+                        line-height: 2em;
+                        grid-row: 1 / 3;                                                  
                         + p {
                               font-weight: 200;
                               color: var(--greyBlue);
